Add basic authentication using JWT

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile "org.hibernate:hibernate-core:5.4.0.Final"
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.2.0.Final'
 
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
     implementation 'com.google.code.gson:gson:2.8.5'
 
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
